force-app/main/default/objects/Goal__c/Goal__c.object-meta.xml
<CustomObject>
    <label>Ziel</label>
    <nameField>
        <label>Ziel-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ziele</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>