force-app/main/default/objects/Goal__c/fields/Betrag_im_Zielmonat__c.field-meta.xml
<CustomField>
    <fullName>Betrag_im_Zielmonat__c</fullName>
    <label>Betrag im Zielmonat</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>