force-app/main/default/objects/Goal__c/fields/goal_month__c.field-meta.xml
<CustomField>
    <fullName>goal_month__c</fullName>
    <formula>MONTH(Monat__c)</formula>
    <label>goal_month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>