force-app/main/default/objects/Goal__c/fields/goal_year__c.field-meta.xml
<CustomField>
    <fullName>goal_year__c</fullName>
    <formula>YEAR(Monat__c)</formula>
    <label>goal_year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>