force-app/main/default/objects/Goal__c/fields/Monat__c.field-meta.xml
<CustomField>
    <fullName>Monat__c</fullName>
    <label>Monat</label>
    <required>true</required>
    <type>Date</type>
</CustomField>