force-app/main/default/objects/Goal__c/fields/Monatsziel__c.field-meta.xml
<CustomField>
    <fullName>Monatsziel__c</fullName>
    <label>Monatsziel</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>