force-app/main/default/objects/Goal__c/fields/Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Name__c</fullName>
    <formula>TEXT(Record_Type__c)</formula>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>