force-app/main/default/objects/Goal__c/fields/RT_Name_Filter__c.field-meta.xml
<CustomField>
    <fullName>RT_Name_Filter__c</fullName>
    <formula>TEXT(Record_Type__c)
+ IF(OR(ISPICKVAL(Record_Type__c, &quot;Consulting&quot;), ISPICKVAL(Record_Type__c, &quot;Other&quot;)), &quot;Con+Oth&quot;, &quot;&quot;)</formula>
    <label>RT Name Filter</label>
    <type>Text</type>
</CustomField>