force-app/main/default/objects/Goal__c/fields/Zieldifferenz__c.field-meta.xml
<CustomField>
    <fullName>Zieldifferenz__c</fullName>
    <formula>Betrag_im_Zielmonat__c - Monatsziel__c</formula>
    <label>Zieldifferenz</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>