force-app/main/default/objects/Goal__c/fields/Zielfortschritt__c.field-meta.xml
<CustomField>
    <fullName>Zielfortschritt__c</fullName>
    <formula>Betrag_im_Zielmonat__c / Monatsziel__c</formula>
    <label>Zielfortschritt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>