force-app/main/default/objects/Goal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Monatsziel__c</columns>
    <columns>Betrag_im_Zielmonat__c</columns>
    <columns>Zieldifferenz__c</columns>
    <columns>Zielfortschritt__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Monat__c</columns>
    <filterScope>Everything</filterScope>
    <label>Alle</label>
</ListView>